kustomize/base/spring-test-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: spring-test
  annotations:
    openshift.io/node-selector: ""
  labels:
    openshift.io/cluster-logging: "true"
    openshift.io/cluster-monitoring: "true"
    argocd.argoproj.io/managed-by: "openshift-gitops"
