kustomize/base/spring-test-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: spring-test
  name: spring-test
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: spring-test
  template:
    metadata:
      labels:
        app: spring-test
    spec:
      containers:
      - image: imageName
        name: spring-test
        ports:
        - containerPort: 6565
          protocol: TCP
