kustomize/base/spring-test-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-test
  name: spring-test
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: spring-test
  type: ClusterIP
